# agent-contracts

./: .gitignore  Makefile  README.md  ROADMAP.md  docker-compose.certification.yaml  docker-compose.yaml  prova.py  pyproject.toml
agent_contracts/: __main__.py  cli.py
agent_contracts/certification/: README.md  __init__.py  config.py  proto.py  runtime_verification.py  workers.py
agent_contracts/core/: __init__.py  config.py
agent_contracts/core/datatypes/dataset/: __init__.py  contract.py  dataset.py  requirement.py
agent_contracts/core/datatypes/specifications/: __init__.py  contract.py  requirement.py  specifications.py
agent_contracts/core/datatypes/trace/: __init__.py  common.py  semcov.py  trace.py
agent_contracts/core/datatypes/verification/: __init__.py  exec_path.py  requirement.py
agent_contracts/core/prompts/: prompt_template.py  provider.py
agent_contracts/core/utils/: nanoid.py  telemetry.py  trace_attributes.py
agent_contracts/core/verification/: base.py  configs.py  contract_checker.py  requirement_checker.py
agent_contracts/core/verification/nl/: exec_path_utils.py  nl_requirement_checker.py
agent_contracts/core/verification/pathconditions/: __init__.py  multi_stage.py  nl_requirement_checker.py  simple.py
agent_contracts/integrations/: base.py  jaeger.py  stackai.py
agent_contracts/tui/: layout.tcss  tui.py
configs/: jaeger-certification-config.yaml  jaeger-config.yaml  otel-collector-config.yaml  runtime-certification.yaml  runtime-verification.yaml
test_utils/: kafka_recorder.py  kafka_replayer.py  kafka_tools.sh
(+26 files in other folders)
