[tool.poetry]
name = "agent-contracts"
version = "0.0.1"
description = ""
authors = ["Pasquale Antonante <pasquale@relari.ai>", "Yi Zhang <yi@relari.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openinference-semantic-conventions = "^0.1.12"
anytree = "^2.12.1"
pydantic = "^2.10.4"
requests = "^2.32.3"
loguru = "^0.7.3"
pymodelchecking = "^1.3.4"
json-repair = "^0.35.0"
jinja2 = "^3.1.5"
aiohttp = "^3.11.12"
openai = "^1.61.1"
tqdm = "^4.67.1"
rich = "^13.9.4"
click = "^8.1.8"
textual = "^1.0.0"
textual-dev = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.3"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "agent_contracts.__main__:cli"
tui = "agent_contracts.tui.tui:main"

[tool.ruff]
ignore = ["E501"] # Avoid enforcing line-length violations (`E501`)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]